cmake_minimum_required(VERSION 2.8)
set(CMAKE_BUILD_TYPE  "Release")
set(CMAKE_CXX_FLAGS   "-w -g -O3")
set(CMAKE_MACOSX_RPATH 1)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

project(libMorphing)	
file(                  GLOB_RECURSE sources src/*)
file(                  GLOB_RECURSE headers src/*.h)
add_library(           libWrapping SHARED ${sources})
#find_library(          Commons NAMES Commons HINTS "/usr/local/lib/iscd" required)
#find_library(          Elasticity NAMES Elasticity HINTS "/usr/local/lib/iscd" required)
include_directories(   "/usr/local/include/iscd")
#target_link_libraries( libWrapping Commons)

project(morphing)
file(                  GLOB_RECURSE sources src/${dirName}/*.c)
add_executable(        wrapping src/wrapping.c)
target_link_libraries( wrapping libWrapping)

install(               TARGETS libWrapping LIBRARY DESTINATION "/usr/local/lib/")
install(               FILES   ${headers} DESTINATION "/usr/local/include/wrapping/")
set_property(          TARGET  libWrapping PROPERTY INSTALL_RPATH_USE_LINK_PATH TRUE)
set_property(          TARGET  libWrapping PROPERTY OUTPUT_NAME Wrapping)
install(               TARGETS wrapping RUNTIME  DESTINATION "/usr/local/bin/")
set_property(          TARGET  wrapping PROPERTY INSTALL_RPATH_USE_LINK_PATH TRUE)
